--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     </a>
                 </div> <!-- end of image-container -->
                 <p style="margin-top: 1rem;"><strong>About Project:</strong>
-                    MindSparl is an AI-powered web app that helps users generate intelligent text-based responses. Users can log in using Google or email/password, receiving 500 free credits to interact with the AI. Before login, limited access encourages users to sign up for full functionality.</p>
+                    MindSpark is an AI-powered web app that helps users generate intelligent text-based responses. Users can log in using Google or email/password, receiving 500 free credits to interact with the AI. Before login, limited access encourages users to sign up for full functionality.</p>
                 <a class="codepen-button" href="https://mindspark-ai.netlify.app/"><span>Launch Project</span></a>
             </div> <!-- end of text-container -->
 
